--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "docxtemplater": "^3.19.7",
+    "pizzip": "^3.0.6",
     "puppeteer": "^5.5.0"
   },
   "devDependencies": {
