--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "search": "node src/index.js"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
