--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "url": "https://github.com/whichxjy/news-crawler"
   },
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "node src/index.js"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
